Remove custom Queue class in favor of directly using built-in Java classes and cleanup.